--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -w test/routeTests.js",
+    "test": "mocha -w test/helpers/browser.js test/components/LoginForm.jsx",
     "start": "nodemon ./bin/www"
   },
   "repository": {
@@ -43,8 +43,12 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "enzyme": "^2.7.1",
     "express": "^4.14.0",
+    "jsdom": "^9.11.0",
     "mocha": "^3.2.0",
+    "react-addons-test-utils": "^15.4.2",
     "redis": "^2.6.3",
     "webpack": "^1.14.0"
   }
