--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -w test/helpers/browser.js test/components/LoginForm.jsx",
+    "test": "mocha -w test/helpers/browser.js test/components/App.jsx",
     "start": "nodemon ./bin/www"
   },
   "repository": {
@@ -43,6 +43,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-1": "^6.22.0",
     "chai": "^3.5.0",
     "enzyme": "^2.7.1",
     "express": "^4.14.0",
